[package]
name = "pkgver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.14"
serde_json = "1"
linked-hash-map = "0.5.6"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.1.8", features = ["derive", "cargo"] }
regex = "1.7.1"
